syntax = "proto3";

option go_package= "calculatorpb";

message Request {
    int32 a = 1;
    int32 b = 2;
}

message Response {
    int32 ans = 1;
}

message PrimeNoDecompositionRequest {
    int32 n = 1;
}

message PrimeNoDecompositionResponse {
    int32 n = 1;
}

service Calculate {
    // Unary
    rpc Add(Request) returns (Response) {};
    // Server side streaming
    rpc PrimeNoDecomposition(PrimeNoDecompositionRequest) returns (stream PrimeNoDecompositionResponse) {}; 
}